--- a/src/A2.TwitterClone.UI/A2.TwitterClone.UI.csproj
+++ b/src/A2.TwitterClone.UI/A2.TwitterClone.UI.csproj
@@ -12,6 +12,11 @@
     <None Include="bundleconfig.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RavenDB.Client" Version="4.2.8" />
+    <PackageReference Include="RavenDB.DependencyInjection" Version="3.1.0" />
+  </ItemGroup>
+
 
 
 </Project>
