--- a/src/A2.TwitterClone.UI/appsettings.json
+++ b/src/A2.TwitterClone.UI/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RavenDbConfig": {
+    "UserName": "",
+    "Password": "",
+    "Url": [ "http://localHost:7050" ],
+    "DBName": "squeek"
+  }
 }
