Changed the RavenDBLibrary as well as add user authentication

--- a/src/A2.TwitterClone.UI/A2.TwitterClone.UI.csproj
+++ b/src/A2.TwitterClone.UI/A2.TwitterClone.UI.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Maqduni.AspNetCore.Identity.RavenDb" Version="4.2.0" />
     <PackageReference Include="RavenDB.Client" Version="4.2.8" />
-    <PackageReference Include="RavenDB.DependencyInjection" Version="3.1.0" />
   </ItemGroup>
 
 
