--- a/src/A2.TwitterClone.UI/appsettings.json
+++ b/src/A2.TwitterClone.UI/appsettings.json
@@ -10,7 +10,7 @@
   "RavenDbConfig": {
     "UserName": "",
     "Password": "",
-    "Url": [ "http://localHost:7050" ],
+    "Url":  "http://localHost:7050" ,
     "DBName": "squeek"
   }
 }
