Added the basic user checks and working on unobstrusive validation

--- a/src/A2.TwitterClone.UI/A2.TwitterClone.UI.csproj
+++ b/src/A2.TwitterClone.UI/A2.TwitterClone.UI.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Maqduni.AspNetCore.Identity.RavenDb" Version="4.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="RavenDB.Client" Version="4.2.8" />
   </ItemGroup>
 
