--- a/src/A2.TwitterClone.UI/appsettings.json
+++ b/src/A2.TwitterClone.UI/appsettings.json
@@ -10,7 +10,7 @@
   "RavenDbConfig": {
     "UserName": "",
     "Password": "",
-    "Url":  "http://localHost:7050" ,
+    "Url": "http://127.0.0.1:8080",
     "DBName": "squeek"
   }
 }
